bug fixes - body overflow

--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,10 @@ html, body, div, span, section, p, a, ul, ol, li, input, textarea, dl, dd, dt, t
   Author's custom styles
   ========================================================================== */
 
+  body {
+    overflow-x: hidden;
+  }
+
   .overlay::after {
     content: '';
     position: absolute;
@@ -459,7 +463,7 @@ html, body, div, span, section, p, a, ul, ol, li, input, textarea, dl, dd, dt, t
   }
 
   .navigate-up {
-    margin: auto 0 auto auto;
+    margin: auto 5px auto auto;
     background-color: #4E9BF8;
     color: #fff;
   }
@@ -574,6 +578,10 @@ html, body, div, span, section, p, a, ul, ol, li, input, textarea, dl, dd, dt, t
 
     .about-us-subheading {
       font-size: 1rem;
+    }
+
+    .copyright-text {
+      width: 70%;
     }
 }
 
